# WP3-KPI-calculator

./: .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
aggregator/: Climate_EU.py  Collection_changer.py  arguments.json  config.json  dataimport.py  smallerSDG.py
aggregator/caller/: i01_func.py  i01a_func.py  i02_func.py  i03_func.py  i05_func.py  i06_func.py  i07_func.py  i08_func.py  i09_func.py  i09b_func.py  i10_func.py  i11_func.py  i12_func.py  i12a_func.py  i12aa_func.py  i12aaa_func.py  i13_func.py  i13a_func.py  i19_func.py  i20_func.py  i21_func.py  i22_func.py  i23_func.py  i23b_func.py  i24_func.py  i24b_func.py  i24c_func.py  i27_func.py  i27a_func.py  i27aa_func.py  i27b_func.py  i27c_func.py  i28_func.py  i29_func.py  i29a_func.py  i29q_func.py  i30a_func.py  i30aa_func.py  i31_func.py  i31a_func.py  (+32 more)
aggregator/config/: ind_to_graph.json  ind_value_datatypes.json  indicator_schema_template.json  indicator_schema_template_per_publisher.json  indicator_schema_template_per_year.json  mapping.json  sv_key_datatypes.json
aggregator/crunchbase/: cancer_crunchbase_icd11.json  cordis_crunchbase_icd11.json  rare_diseases_crunchbase_icd11.json  upload_mongo.py
aggregator/graphs/: agrifood.json  energy.json  i01_sv01.json  i01_sv05.json  i01_sv06.json  i01_sv09.json  i01_sv10.json  i03_sv02.json  i06_sv01.json  i07_sv01.json  i07_sv02.json  i07_sv05.json  i07_sv06.json  i07_sv09.json  i07_sv12.json  i08_sv01.json  i09_sv01.json  i09_sv02.json  i09_sv06.json  i09_sv07.json  (+22 more)
docker/: aggregator.Dockerfile
tests/: test_connection.py
(+83 files in other folders)
