[tool.poetry]
name = "aggregator"
version = "0.1.0"
description = ""
authors = ["gkountouris <george.kountouris@yahoo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^2.0.1"
pymongo = "^4.3.3"
requests = "^2.30.0"
tqdm = "^4.65.0"
ijson = "^3.2.0.post0"
toml = "^0.10.2"
psycopg2-binary = "^2.9.6"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.1"
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
